--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,9 +16,13 @@
     "@mui/icons-material": "^7.1.0",
     "@mui/material": "^7.1.0",
     "framer-motion": "^12.12.1",
+    "gsap": "^3.13.0",
+    "ogl": "^1.0.11",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-intersection-observer": "^9.16.0",
+    "react-router-dom": "^7.8.1",
+    "tailwindcss": "^4.1.12",
     "three": "^0.176.0"
   },
   "devDependencies": {
